--- a/testes_tinanic.ipynb
+++ b/testes_tinanic.ipynb
@@ -2,19 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "eff99ce6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'accuracy_score' from 'sklearn.model_selection' (/home/ettore/.local/share/mamba/envs/datascience/lib/python3.12/site-packages/sklearn/model_selection/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split, accuracy_score\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m precision_score, recall_score, f1_score, classification_report\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'accuracy_score' from 'sklearn.model_selection' (/home/ettore/.local/share/mamba/envs/datascience/lib/python3.12/site-packages/sklearn/model_selection/__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset carregado com sucesso de: titanic/train.csv\n",
+      "Tamanho inicial do dataset: 891\n"
      ]
     }
    ],
@@ -44,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "25abfe7e",
    "metadata": {},
    "outputs": [
@@ -205,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "6475eaee",
    "metadata": {},
    "outputs": [
@@ -240,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "7f0ab59a",
    "metadata": {},
    "outputs": [
@@ -1392,18 +1389,16 @@
       "F1-Score: 0.4783\n",
       "==================================================\n",
       "\n",
-      "Relatório de Classificação Completo:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'classification_report' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 55\u001b[39m\n\u001b[32m     52\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m*\u001b[32m50\u001b[39m)\n\u001b[32m     54\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mRelatório de Classificação Completo:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m55\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mclassification_report\u001b[49m(y_test, y_pred, zero_division=\u001b[32m0\u001b[39m))\n",
-      "\u001b[31mNameError\u001b[39m: name 'classification_report' is not defined"
+      "Relatório de Classificação Completo:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.69      0.86      0.77       137\n",
+      "           1       0.63      0.38      0.48        86\n",
+      "\n",
+      "    accuracy                           0.68       223\n",
+      "   macro avg       0.66      0.62      0.62       223\n",
+      "weighted avg       0.67      0.68      0.66       223\n",
+      "\n"
      ]
     }
    ],
@@ -1467,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "dccb6c73",
    "metadata": {},
    "outputs": [
@@ -1783,18 +1778,16 @@
       "F1-Score: 0.7027\n",
       "==================================================\n",
       "\n",
-      "Relatório de Classificação Completo:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'classification_report' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 55\u001b[39m\n\u001b[32m     52\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m*\u001b[32m50\u001b[39m)\n\u001b[32m     54\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mRelatório de Classificação Completo:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m55\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mclassification_report\u001b[49m(y_test, y_pred, zero_division=\u001b[32m0\u001b[39m))\n",
-      "\u001b[31mNameError\u001b[39m: name 'classification_report' is not defined"
+      "Relatório de Classificação Completo:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.79      0.93      0.85       137\n",
+      "           1       0.84      0.60      0.70        86\n",
+      "\n",
+      "    accuracy                           0.80       223\n",
+      "   macro avg       0.81      0.77      0.78       223\n",
+      "weighted avg       0.81      0.80      0.79       223\n",
+      "\n"
      ]
     }
    ],
@@ -1858,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "2aee49b1",
    "metadata": {},
    "outputs": [
@@ -1899,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "a9dd3006",
    "metadata": {},
    "outputs": [
@@ -2035,18 +2028,16 @@
       "F1-Score: 0.7097\n",
       "==================================================\n",
       "\n",
-      "Relatório de Classificação Completo:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'classification_report' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 48\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[38;5;66;03m# O classification_report é uma ótima forma de ver tudo de uma vez\u001b[39;00m\n\u001b[32m     47\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mRelatório de Classificação Completo:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mclassification_report\u001b[49m(y_test_ohe, y_pred, zero_division=\u001b[32m0\u001b[39m))\n",
-      "\u001b[31mNameError\u001b[39m: name 'classification_report' is not defined"
+      "Relatório de Classificação Completo:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.90      0.85       137\n",
+      "           1       0.80      0.64      0.71        86\n",
+      "\n",
+      "    accuracy                           0.80       223\n",
+      "   macro avg       0.80      0.77      0.78       223\n",
+      "weighted avg       0.80      0.80      0.79       223\n",
+      "\n"
      ]
     }
    ],
